# airport

./: ReadMe by Amit.txt
FProject/: CMakeLists.txt  main.c
FProject/headers/: Passengers.h  airline.h  airport.h  airport_manager.h  date.h  def.h  flight.h  functions.h
FProject/sources/: airline.c  airport.c  airport_manager.c  date.c  flight.c  functions.c
project_partB-main/: ReadMe by Amit.txt
project_partB-main/FProject/: CMakeLists.txt  main.c
project_partB-main/FProject/headers/: Passengers.h  airline.h  airport.h  airport_manager.h  date.h  def.h  flight.h  functions.h
project_partB-main/FProject/sources/: airline.c  airport.c  airport_manager.c  date.c  flight.c  functions.c
